异常机制处理改造

--- a/dto-assembler-test-demo/src/main/resources/application.yaml
+++ b/dto-assembler-test-demo/src/main/resources/application.yaml
@@ -3,6 +3,11 @@ spring:
     messages:
       basename: classpath:i18n/messages
       encoding: UTF-8
+    api-log:
+      type: all
+    format:
+      pattern:
+        date-time: dd/MM/yyyy HH:mm:ss
   jpa:
     hibernate:
       ddl-auto: update
