--- a/dto-assembler-spring-boot-starter/pom.xml
+++ b/dto-assembler-spring-boot-starter/pom.xml
@@ -52,4 +52,11 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>snapshots</id>
+            <url>http://192.168.42.108:8081/repository/maven-snapshots/</url>
+        </repository>
+    </distributionManagement>
+
 </project>
